fix: resolve coderabbit code reviews